<resources>
    <string name="app_name">Meanings</string>
    <string name="app_publisher">by Virtroop Develop</string>

    <string name="language_selection_error">Error selecting new language</string>

    <string name="message_about_app">About apps</string>
    <string name="message_apply">Apply</string>
    <string name="message_cancel">Cancel</string>
    <string name="message_communicate">Get in touch</string>
    <string name="message_english">English</string>
    <string name="message_feedback">Tell us what you think</string>
    <string name="message_italian">Italian</string>
    <string name="message_language">Language</string>
    <string name="message_language_name">(%s)</string>
    <string name="message_privacy_policy">Privacy Policy</string>
    <string name="message_rate_app">Rate the app!</string>
    <string name="message_search">Search</string>
    <string name="message_toolbar_close">Close</string>
    <string name="message_toolbar_open">Open</string>
    <string name="message_select_language">Select the new language</string>
    <string name="message_settings">Settings</string>
    <string name="message_spanish">Spanish</string>
    <string name="message_version">Version: %s</string>

    <string name="word_not_found_error">No definitions for: %s found</string>
</resources>
